# AssyncCurrencyTracker

./: .gitignore  README.md  docker-compose.yml  dockerfile.app  dockerfile.scheduler  pyproject.toml
src/: scheduler.py
src/config/: config.py  container_config.py  redis_config.py
src/jobs/: daily_currency.py  enqueue_jobs.py  get_currency.py  scheduler.py
src/jobs/contracts/implementations/beanie/: document.py
src/jobs/controllers/: insert_new_value.py
src/modules/currency/contracts/dtos/: save_currency.py
src/modules/currency/contracts/repositories/: currency_repository.py
src/modules/currency/entities/: currency.py
src/modules/currency/implementations/beanie/: currency_endpoint.py  documents.py  fake_endpoint.py
src/modules/currency/routers/: currency_endpoint.py
src/modules/currency/services/currency_respository/: controller.py  service.py
src/providers/: container.py
src/server/: index.py  routes.py
src/tests/: test.py
