[tool.poetry]
name = "arq-using-examples"
version = "0.1.0"
description = ""
authors = ["Davidson <davidson.salinas@tripservice.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
black = "^24.4.2"
beanie = "^1.25.0"
httpx = "^0.27.0"
arq = "^0.25.0"
motor = "^3.4.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
types-requests = "^2.31.0.20240406"
fastapi = "^0.110.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
